--- a/New Unity Project/Assembly-CSharp.csproj
+++ b/New Unity Project/Assembly-CSharp.csproj
@@ -204,6 +204,7 @@
      <Compile Include="Assets\Map\LowPolyWaterv2\Scripts\src\LPWReflection.cs" />
      <Compile Include="Assets\Map\LowPolyWaterv2\Scripts\src\LPWWaterChunk.cs" />
      <Compile Include="Assets\RotationCtrl.cs" />
+     <Compile Include="Assets\Script\GameManage.cs" />
      <Compile Include="Assets\Script\Gravity.cs" />
      <Compile Include="Assets\Script\MoveCtrl.cs" />
      <Compile Include="Assets\Script\NewBehaviourScript.cs" />
